# boulder-app-rust

./: .env  Cargo.toml
src/: db.rs  main.rs  models.rs  ops.rs  schema.rs  scraping.rs  structs.rs
src/ops/: boulder_ops.rs  user_ops.rs
src/scraping/: boulder_object.rs  fetch_boulders.rs  fetch_setter.rs  setter_object.rs
src/structs/: boulder_data.rs  setter_data.rs
