[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
diesel = { version = "2.0.1", features = ["uuid", "r2d2", "postgres", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15"
chrono = "^0"
# Requests and async
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }